--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -1,44 +1,99 @@
 name: Release
 
 on:
+  pull_request:
+    types: [opened, reopened, ready_for_review, synchronize]
   push:
-    tags:
-      - '*'
-
-env:
-  ACTIONS_RUNNER_DEBUG: true
+    branches: [main, release]
+    tags-ignore: "**"
 
 jobs:
-  build-darwin:
-    name: Release new version
+  test:
+    name: Tests and Build
     runs-on: macos-latest
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
       -
-        name: Install xcodegen
+        name: Install xcodegen via Homebrew for linting and building xcode project
         run: brew install xcodegen
       -
-        name: Generate Project
+        name: Generate project
         run: xcodegen
       -
-        name: Build App
+        name: Build app
         run: xcodebuild
       -
-        name: Import Certs
+        name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: app
+          path: build/Debug/WakaTime.app
+
+  version:
+    name: Version
+    concurrency: tagging
+    if: ${{ github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    needs: [test]
+    outputs:
+      semver_tag: ${{ steps.semver-tag.outputs.semver_tag }}
+      ancestor_tag: ${{ steps.semver-tag.outputs.ancestor_tag }}
+      is_prerelease: ${{ steps.semver-tag.outputs.is_prerelease }}
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      -
+        name: Calculate semver tag
+        id: semver-tag
+        uses: wakatime/semver-action@master
+        with:
+          prerelease_id: alpha
+          develop_branch_name: main
+          main_branch_name: release
+      - name: Create tag
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/${{ steps.semver-tag.outputs.semver_tag }}",
+              sha: context.sha
+            })
+
+  sign:
+    name: Sign Apple app
+    needs: [version]
+    runs-on: macos-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: app
+          path: WakaTime.app/
+      -
+        name: Import Code-Signing Certificates
         uses: Apple-Actions/import-codesign-certs@v1
         with:
           # The certificates in a PKCS12 file encoded as a base64 string
           p12-file-base64: ${{ secrets.APPLE_DEVELOPER_CERTIFICATE_P12_BASE64 }}
           # The password used to import the PKCS12 file.
           p12-password: ${{ secrets.APPLE_DEVELOPER_CERTIFICATE_PASSWORD }}
-      -
-        name: Sign
-        run: /usr/bin/codesign --force -s "WakaTime" --options runtime build/Debug/WakaTime.app -v
-      -
-        name: Notarize
-        # Extract the secrets we defined earlier as environment variables
+      - 
+        name: Codesign app bundle
+        run: /usr/bin/codesign --force -s "WakaTime" --options runtime WakaTime.app -v
+      - 
+        name: Notarize app bundle
         env:
           NOTARIZATION_APPLE_ID: ${{ secrets.AC_USERNAME }}
           NOTARIZATION_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
@@ -55,7 +110,7 @@ jobs:
           # notarization service
 
           echo "Creating temp notarization archive"
-          ditto -c -k --keepParent "build/Debug/WakaTime.app" "notarization.zip"
+          ditto -c -k --keepParent "WakaTime.app" "notarization.zip"
 
           # Here we send the notarization request to the Apple's Notarization service, waiting for the result.
           # This typically takes a few seconds inside a CI environment, but it might take more depending on the App
@@ -68,12 +123,91 @@ jobs:
           # Finally, we need to "attach the staple" to our executable, which will allow our app to be
           # validated by macOS even when an internet connection is not available.
           echo "Attach staple"
-          xcrun stapler staple "build/Debug/WakaTime.app"
+          xcrun stapler staple "WakaTime.app"
       -
         name: Zip
-        run: ditto -c -k --sequesterRsrc --keepParent build/Debug/WakaTime.app WakaTime.zip
+        run: ditto -c -k --sequesterRsrc --keepParent WakaTime.app WakaTime.zip
       -
         name: Create release
         uses: softprops/action-gh-release@v1
         with:
-          files: WakaTime.zip
+          name: app
+          path: WakaTime.zip
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [sign]
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      -
+        # Run only for main branch
+        if: ${{ github.ref == 'refs/heads/main' }}
+        name: Changelog for main
+        uses: gandarez/changelog-action@v1.2.0
+        id: changelog-main
+        with:
+          current_tag: ${{ github.sha }}
+          previous_tag: ${{ needs.version.outputs.ancestor_tag }}
+          exclude: |
+            ^Merge pull request .*
+      -
+        # Run only for release branch
+        if: ${{ github.ref == 'refs/heads/release' }}
+        name: Get related pull request
+        uses: 8BitJonny/gh-get-current-pr@1.4.0
+        id: changelog-release
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Prepare changelog
+        id: changelog
+        run: |
+          changelog="${{ steps.changelog-main.outputs.changelog || steps.changelog-release.outputs.pr_body }}"
+          ./bin/prepare_changelog.sh $(echo ${GITHUB_REF#refs/heads/}) "$changelog"
+      -
+        name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: app
+          path: ./
+      -
+        name: "Create release"
+        uses: softprops/action-gh-release@master
+        with:
+          name: ${{ needs.version.outputs.semver_tag }}
+          tag_name: ${{ needs.version.outputs.semver_tag }}
+          body: "## Changelog\n${{ steps.changelog.outputs.changelog }}"
+          prerelease: ${{ needs.version.outputs.is_prerelease }}
+          target_commitish: ${{ github.sha }}
+          draft: false
+          files: ./WakaTime.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - 
+        name: Update project.yml
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: 'project.yml'
+          propertyPath: 'targets.WakaTime.settings.MARKETING_VERSION'
+          value: ${{ needs.version.outputs.semver_tag }}
+          commitChange: true
+          branch: ${{ github.ref }}
+          message: "Update MARKETING_VERSION to ${{ needs.version.outputs.semver_tag }}"
+      -
+        name: Remove tag if failure
+        if: ${{ failure() }}
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            github.rest.git.deleteRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "tags/${{ needs.version.outputs.semver_tag }}"
+            })
+
