--- a/project.yml
+++ b/project.yml
@@ -21,5 +21,5 @@ targets:
       ENABLE_HARDENED_RUNTIME: YES
       DEAD_CODE_STRIPPING: YES
     postCompileScripts:
-      - script: ./.build/artifacts/swiftlint/SwiftLintBinary.artifactbundle/swiftlint-0.51.0-macos/bin/swiftlint lint --quiet
+      - script: ./Scripts/SwiftLint/swiftlint lint --quiet
         name: Swiftlint
