--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -74,7 +74,7 @@ jobs:
         name: Update project.yml
         uses: fjogeleit/yaml-update-action@main
         with:
-          valueFile: './project.yml'
+          valueFile: 'project.yml'
           propertyPath: 'targets.WakaTime.settings.MARKETING_VERSION'
           value: ${{ needs.version.outputs.semver_tag }}
           commitChange: true
