Configure yaml-update-action

--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -78,8 +78,7 @@ jobs:
           propertyPath: 'targets.WakaTime.settings.MARKETING_VERSION'
           value: ${{ needs.version.outputs.semver_tag }}
           commitChange: true
-          branch: ${{ github.ref }}
-          masterBranchName: ${{ github.ref }}
+          branch: ${{ github.ref_name }}
           message: "Update MARKETING_VERSION to ${{ needs.version.outputs.semver_tag }}"
       -
         name: Install xcodegen via Homebrew for linting and building xcode project
