--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -62,9 +62,27 @@ jobs:
               sha: context.sha
             })
 
+  format:
+    name: Format version from tag
+    needs: [version]
+    runs-on: ubuntu-latest
+    env:
+      semver_tag:
+    outputs:
+      semver: ${{ steps.format.outputs.semver }}
+    steps:
+      -
+        name: Remove v prefix
+        id: format
+        run: |
+          echo "${{ needs.version.outputs.semver_tag }}"
+          ver=`echo "${{ needs.version.outputs.semver_tag }}" | sed 's/^v//'`
+          echo "$ver"
+          echo "semver=$ver" >> $GITHUB_OUTPUT
+
   sign:
     name: Sign Apple app
-    needs: [version]
+    needs: [format]
     runs-on: macos-latest
     steps:
       -
