Add back version dependency to release step

--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -164,7 +164,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [sign]
+    needs: [version, sign]
     steps:
       -
         name: Checkout
