--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -125,7 +125,7 @@ jobs:
           # notarization service
 
           echo "Creating temp notarization archive"
-          ditto -c -k --keepParent "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime\ Helper.app" "helper_notarization.zip"
+          ditto -c -k --keepParent "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app" "helper_notarization.zip"
 
           # Here we send the notarization request to the Apple's Notarization service, waiting for the result.
           # This typically takes a few seconds inside a CI environment, but it might take more depending on the App
@@ -138,7 +138,7 @@ jobs:
           # Finally, we need to "attach the staple" to our executable, which will allow our app to be
           # validated by macOS even when an internet connection is not available.
           echo "Attach staple"
-          xcrun stapler staple "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime\ Helper.app"
+          xcrun stapler staple "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app"
       -
         name: Codesign app bundle
         run: /usr/bin/codesign --force -s "WakaTime" --options runtime build/Release/WakaTime.app -v
