--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -3,77 +3,10 @@ name: Release
 on:
   pull_request:
     types: [opened, reopened, ready_for_review, synchronize]
-  push:
-    branches: [main, release]
-    tags-ignore: "**"
 
 jobs:
-  test:
-    name: Tests and Build
-    runs-on: macos-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Install xcodegen via Homebrew for linting and building xcode project
-        run: brew install xcodegen
-      -
-        name: Generate project
-        run: xcodegen
-      -
-        name: Build app to run linters
-        run: xcodebuild
-
-  version:
-    name: Version
-    concurrency: tagging
-    if: ${{ github.ref == 'refs/heads/release' || github.ref == 'refs/heads/main' }}
-    runs-on: ubuntu-latest
-    needs: [test]
-    outputs:
-      semver: ${{ steps.format.outputs.semver }}
-      semver_tag: ${{ steps.semver-tag.outputs.semver_tag }}
-      ancestor_tag: ${{ steps.semver-tag.outputs.ancestor_tag }}
-      is_prerelease: ${{ steps.semver-tag.outputs.is_prerelease }}
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      -
-        name: Calculate semver tag
-        id: semver-tag
-        uses: wakatime/semver-action@master
-        with:
-          prerelease_id: alpha
-          develop_branch_name: main
-          main_branch_name: release
-      -
-        name: Format
-        id: format
-        run: |
-          echo "${{ steps.semver-tag.outputs.semver_tag }}"
-          ver=`echo "${{ steps.semver-tag.outputs.semver_tag }}" | sed 's/^v//'`
-          echo "$ver"
-          echo "semver=$ver" >> $GITHUB_OUTPUT
-      -
-        name: Create tag
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ github.token }}
-          script: |
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: "refs/tags/${{ steps.semver-tag.outputs.semver_tag }}",
-              sha: context.sha
-            })
-
   sign:
     name: Sign Apple app
-    needs: [version]
     runs-on: macos-latest
     steps:
       -
@@ -85,7 +18,7 @@ jobs:
         with:
           valueFile: 'project.yml'
           propertyPath: 'targets.WakaTime.settings.MARKETING_VERSION'
-          value: ${{ needs.version.outputs.semver }}
+          value: '1.2.3'
           commitChange: false
       -
         name: Install xcodegen via Homebrew for linting and building xcode project
@@ -131,82 +64,3 @@ jobs:
         with:
           name: app
           path: ./WakaTime.zip
-      -
-        name: Remove tag if failure
-        if: ${{ failure() }}
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ github.token }}
-          script: |
-            github.rest.git.deleteRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: "tags/${{ needs.version.outputs.semver_tag }}"
-            })
-
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [version, sign]
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      -
-        # Run only for main branch
-        if: ${{ github.ref == 'refs/heads/main' }}
-        name: Changelog for main
-        uses: gandarez/changelog-action@v1.2.0
-        id: changelog-main
-        with:
-          current_tag: ${{ github.sha }}
-          previous_tag: ${{ needs.version.outputs.ancestor_tag }}
-          exclude: |
-            ^Merge pull request .*
-      -
-        # Run only for release branch
-        if: ${{ github.ref == 'refs/heads/release' }}
-        name: Get related pull request
-        uses: 8BitJonny/gh-get-current-pr@2.2.0
-        id: changelog-release
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Prepare changelog
-        id: changelog
-        run: |
-          echo "${{ steps.changelog-main.outputs.changelog || steps.changelog-release.outputs.pr_body }}" > changelog.txt
-          ./bin/prepare_changelog.sh $(echo ${GITHUB_REF#refs/heads/}) "$(cat changelog.txt)"
-      -
-        name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: app
-          path: ./
-      -
-        name: "Create release"
-        uses: softprops/action-gh-release@master
-        with:
-          name: ${{ needs.version.outputs.semver_tag }}
-          tag_name: ${{ needs.version.outputs.semver_tag }}
-          body: "## Changelog\n${{ steps.changelog.outputs.changelog }}"
-          prerelease: ${{ needs.version.outputs.is_prerelease }}
-          target_commitish: ${{ github.sha }}
-          draft: false
-          files: ./WakaTime.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Remove tag if failure
-        if: ${{ failure() }}
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ github.token }}
-          script: |
-            github.rest.git.deleteRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: "tags/${{ needs.version.outputs.semver_tag }}"
-            })
