--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -38,7 +38,12 @@ jobs:
           # The password used to import the PKCS12 file.
           p12-password: ${{ secrets.APPLE_DEVELOPER_CERTIFICATE_PASSWORD }}
       -
-        name: Codesign
+        name: Codesign WakaTime Helper.app
+        run: |
+          /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app" -v
+          /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app"
+      -
+        name: Codesign WakaTime.app
         run: |
           /usr/bin/codesign --force -s "WakaTime" --options runtime build/Release/WakaTime.app -v
           /usr/bin/codesign --verify --deep --strict --verbose=2 build/Release/WakaTime.app
