--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -64,7 +64,8 @@ jobs:
         name: Notarize WakaTime.app
         run: |
           ditto -c -k --keepParent build/Release/WakaTime.app main.zip
-          xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait
+          UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
+          xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
       -
         name: Staple WakaTime.app
         run: |
