--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -42,11 +42,11 @@ jobs:
         run: |
           /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app" -v
           /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app"
-      -
-        name: Codesign libswift_Concurrency.dylib
-        run: |
-          /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib" -v
-          /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib"
+      #-
+      #  name: Codesign libswift_Concurrency.dylib
+      #  run: |
+      #    /usr/bin/codesign --force -s "WakaTime" --options runtime "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib" -v
+      #    /usr/bin/codesign --verify --deep --strict --verbose=2 "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib"
       -
         name: Codesign WakaTime.app
         run: |
@@ -65,12 +65,12 @@ jobs:
           ditto -c -k --keepParent "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app" helper.zip
           xcrun notarytool submit helper.zip --keychain-profile "notarytool-profile" --wait
           xcrun stapler staple "build/Release/WakaTime.app/Contents/Library/LoginItems/WakaTime Helper.app"
-      -
-        name: Notarize libswift_Concurrency.dylib
-        run: |
-          ditto -c -k --keepParent "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib" concurrency.zip
-          xcrun notarytool submit concurrency.zip --keychain-profile "notarytool-profile" --wait
-          xcrun stapler staple "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib"
+      #-
+      #  name: Notarize libswift_Concurrency.dylib
+      #  run: |
+      #    ditto -c -k --keepParent "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib" concurrency.zip
+      #    xcrun notarytool submit concurrency.zip --keychain-profile "notarytool-profile" --wait
+      #    xcrun stapler staple "build/Release/WakaTime.app/Contents/Frameworks/libswift_Concurrency.dylib"
       -
         name: Notarize WakaTime.app
         run: |
