--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -75,7 +75,7 @@ jobs:
         name: Notarize WakaTime.app
         run: |
           ditto -c -k --keepParent build/Release/WakaTime.app main.zip
-          UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
+          UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -m 1 -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
           echo $UUID
           xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
       -
