--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -76,9 +76,8 @@ jobs:
         run: |
           ditto -c -k --keepParent build/Release/WakaTime.app main.zip
           UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -m 1 -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
-          xcrun notarytool history --keychain-profile "notarytool-profile"
-          #xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
-          sleep 300
+          #xcrun notarytool history --keychain-profile "notarytool-profile"
+          xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
       -
         name: Staple WakaTime.app
         run: |
