--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -75,9 +75,10 @@ jobs:
         name: Notarize WakaTime.app
         run: |
           ditto -c -k --keepParent build/Release/WakaTime.app main.zip
-          UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -m 1 -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
+          #UUID=$(xcrun notarytool submit main.zip --keychain-profile "notarytool-profile" --wait | grep -m 1 -o '[0-9a-f]\{8\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{4\}-[0-9a-f]\{12\}')
           #xcrun notarytool history --keychain-profile "notarytool-profile"
-          xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
+          #xcrun notarytool log $UUID --keychain-profile "notarytool-profile"
+          xcrun notarytool log 8757991b-d7e8-4dda-9fb5-350c50173646 --keychain-profile "notarytool-profile"
       -
         name: Staple WakaTime.app
         run: |
