--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -23,7 +23,7 @@ jobs:
         run: xcodegen
       -
         name: Build app to run linters
-        run: xcodebuild
+        run: xcodebuild -scheme WakaTime
 
   version:
     name: Version
@@ -98,7 +98,7 @@ jobs:
         run: xcodegen
       -
         name: Build app
-        run: xcodebuild -configuration Release
+        run: xcodebuild -scheme WakaTime -configuration Release
       -
         name: Import Code-Signing Certificates
         uses: Apple-Actions/import-codesign-certs@v1
