--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -151,7 +151,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: [version, sign]
     steps:
       -
