Fix action typo

--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -200,7 +200,7 @@ jobs:
   release:
     name: Release
     runs-on: macos-latest
-    needs: [version, sign, prerelease]
+    needs: [version, sign, changelog]
     steps:
       -
         name: Checkout
