Add bridging header to xcodegen

--- a/project.yml
+++ b/project.yml
@@ -24,6 +24,7 @@ targets:
       DEVELOPMENT_TEAM: ${SV_DEVELOPMENT_TEAM}
       ENABLE_HARDENED_RUNTIME: YES
       DEAD_CODE_STRIPPING: YES
+      SWIFT_OBJC_BRIDGING_HEADER: WakaTime/WakaTime-Bridging-Header.h
     postCompileScripts:
       - script: ./Scripts/Lint/swiftlint lint --quiet
         name: Swiftlint
