Set SUAutomaticallyUpdate to enable automatic download and installation of updates by default

--- a/WakaTime/WakaTime-Info.plist
+++ b/WakaTime/WakaTime-Info.plist
@@ -12,6 +12,8 @@
 	<string>YES</string>
 	<key>SUEnableAutomaticChecks</key>
 	<string>YES</string>
+	<key>SUAutomaticallyUpdate</key>
+	<string>YES</string>
 	<key>LSUIElement</key>
 	<true/>
 	<key>CFBundleURLTypes</key>
